--- a/secrets/docker-compose.yml
+++ b/secrets/docker-compose.yml
@@ -14,11 +14,17 @@ services:
           memory: 60M
     ports:
       - "80:80"
-    # echo "Alaska2017" | docker secret create SA_PASSWORD -
+    # echo "Alaska2017" | tee ./my_secret.txt
     environment:
-      SA_PASSWORD: "/run/secrets/SA_PASSWORD"
+      SA_PASSWORD: "/run/secrets/my_secret"
       ACCEPT_EULA: "Y"
     healthcheck:
       test: echo $SA_PASSWORD | tee /tmp/test 
+    secrets:
+      - my_secret
 networks:
   frontend:
+secrets:
+  my_secret:
+    file: ./my_secret.txt
+  
