--- a/secrets/docker-compose.yml
+++ b/secrets/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       SA_PASSWORD: "/run/secrets/my_secret"
       ACCEPT_EULA: "Y"
     healthcheck:
-      test: echo $SA_PASSWORD | tee /tmp/test 
+      test: echo $( cat /run/secrets/my_secret ) | tee /tmp/test 
     secrets:
       - my_secret
 networks:
