--- a/Swarm/AWS/cloud-formation.yml
+++ b/Swarm/AWS/cloud-formation.yml
@@ -123,14 +123,16 @@ Parameters:
     Type: String
     Description: >
       Select Amazon EC2 instance type for the UCP Manager instances.
-    Default: t2.micro
+    Default: t3a.nano
     ConstraintDescription: >
       Choose an instance type.
     AllowedValues:
+      - t2.nano
       - t2.micro
       - t3.small
       - t3.medium
       - t3.large
+      - t3a.nano
       - t3a.micro
       - t3a.small
       - t3a.medium
@@ -140,14 +142,16 @@ Parameters:
     Type: String
     Description: >
       Select Amazon EC2 instance type for the UCP Worker instances.
-    Default: t2.micro
+    Default: t3a.micro
     ConstraintDescription: >
       Choose an instance type.
     AllowedValues:
+      - t2.nano
       - t2.micro
       - t3.small
       - t3.medium
       - t3.large
+      - t3a.nano
       - t3a.micro
       - t3a.small
       - t3a.medium
