--- a/Swarm/AWS/app/php.yml
+++ b/Swarm/AWS/app/php.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
  php:
-  image: secobau/php:apache
+  image: secobau/php:rc-apache-1.1
   ports:
    - "8080:80"
   deploy:
