--- a/Swarm/AWS/app/dockercoins.yml
+++ b/Swarm/AWS/app/dockercoins.yml
@@ -36,7 +36,7 @@ services:
   worker:
     image: secobau/dockercoins:worker-1.0
     deploy:
-      replicas: 3 #Change to 21 to improve performance in 7x
+      replicas: 3 #Change to 51+ to improve performance
       placement:
         constraints:
         - node.role == worker
